<resources>
    <string name="app_name">JOB LIBRARY</string>
    <string name="localhost">http://192.168.1.103:8009</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_base2" translatable="false">BaseActivity2</string>

    <string name="mp_salaryCheck">SALARY CHECK</string>
    <string name="mp_searchJobs">SEARCH JOBS</string>
    <string name="mp_CV">CV</string>
    <string name="mp_appliedJobs">APPLIED\nJOBS</string>
    <string name="mp_FAQ">FAQ</string>
    <string name="mp_exit">EXIT</string>

    <string name="dra_searchJobs">Search Jobs</string>
    <string name="dra_appliedJobs">Applied Jobs</string>
    <string name="dra_salaryCheck">Salary Check</string>
    <string name="dra_salaryReport">Salary Report</string>
    <string name="dra_settings">Settings</string>
    <string name="dra_aboutUs">About Us</string>
    <string name="dra_exit">Exit</string>

    <string name="sC_jobtitle">Job Title</string>
    <string name="sC_jobFunction">Job Function</string>
    <string name="sC_jobIndustry">Job Industry</string>
    <string name="sC_Salarysource">Source(s) Within</string>
    <string name="sC_searchWithS">Search with similar words</string>
    <string name="sC_workExp">Work Exp</string>
    <string name="sC_SourceT">Source Type</string>
    <string name="sC_buttonSearch">Search Now</string>
    <string name="sC_Workstart">Work Experience (From)</string>
    <string name="sC_WorkTo">Work Experience (To)</string>
    <string name="sC_reminder1">Please enter the job title first</string>
    <string name="sC_reminder2">Select up to 5 choices only.</string>
    <string name="sC_reminder3"> items selected</string>
    <string name="sC_reminder4">Salary Source(s) Within - </string>
    <string name="sC_reminder5">Work Exp To - </string>
    <string name="sC_reminder6">Work Exp From - </string>
    <string name="sC_reminder7">Zero result was found</string>
    <string name="sC_reminder8">Please search with othes keywords</string>
    <string name="sC_reminder9">Source Type - </string>
    <string name="sC_entriesName1">Labour</string>
    <string name="sC_entriesName2">Employer</string>
    <string name="sC_resultTitle">Salary Check Result</string>

    <string name="sC_doubleTap">Double tap for full screen display</string>
    <string name="sC_doubleTap_leave" >Double tap to exit full screen</string>


    <string name="from">From</string>
    <string name="to">To</string>

    <string name="unspecified">Unspecified</string>
    <string name="employer">Employer</string>
    <string name="jobSeeker">Job Seeker</string>

    <string name="barC_title">Salary Distribution</string>
    <string name="relevantSalaryD">RELEVANT SALARY DATA</string>
    <string name="barC_landscape_title"> Salary Distribution Chart</string>
    <string name="barC_low">Lowest</string>
    <string name="barC_mid">Median</string>
    <string name="barC_high">Highest</string>

    <string name="rlj_jobT">Job Tilte : </string>
    <string name="rlj_workExp">WorkExp : </string>
    <string name="rlj_wages">Wages : </string>

    <string name="faq_name">Name</string>
    <string name="faq_email">Email Address</string>
    <string name="faq_comments">Comments</string>
    <string name="faq_btnR">Reset</string>
    <string name="faq_btnD">Done</string>
    <string name="faq_title">Having something to say?</string>
    <string name="feedback">FeedBack</string>

    <string name="appJob_reminder1">All record was found!</string>

    <string name="language">Language</string>
    <string name="fontSizeSetting">Font Size</string>
    <string name="notification">Notification</string>
    <string name="CV_phoneNo">Phone Number</string>
    <string name="CV_expectedSalary">Expected Salary (HKD)</string>
    <string name="CV_submit">Submit</string>
    <string name="Cv_eduLevel">Education Level</string>
    <string name="Cv_reminder1">Already taken a video</string>
    <string name="Cv_reminder2">Empty Field(s) Found</string>
    <string name="Cv_reminder3">Loading...</string>
    <string name="Cv_reminder4">Internet is not working</string>
    <string name="Cv_reminder5">Take a new video or Play currently video ?</string>
    <string name="Cv_reminder6">Take Video</string>
    <string name="Cv_reminder7">Play</string>
    <string name="Cv_reminder9">Sorry, target file have been deleted on your phone</string>
    <string name="Cv_reminder10">Please fill in every field !</string>
    <string name="Cv_reminder11" translatable="false"></string>
    <string name="Cv_reminder12" translatable="false"></string>
    <string name="Cv_reminder13" translatable="false"></string>
    <string name="Cv_reminder14">Please enter the correct format for email address</string>
    <string name="Cv_video_title">Self Introduction Video</string>

    <string name="jobDetail_reminder1">Cannot apply the same job within 3 seconds</string>

    <string name="relevantData_reminder1">No more records</string>
    <string name="apply">Apply now</string>
    <string name="jobDesc">Job Description</string>
    <string name="industrial">Industry</string>
    <string name="jobinfo">Job Info</string>
    <string name="companyInfo">Company Info</string>
    <string name="jobFun">Job Funcion</string>

    <string name="act_lab_cv">Curriculum Vitae</string>
    <string name="mainPage">Home page</string>
    <string name="jobs">JOBS</string>
    <string name="salary">SALARY</string>
    <string name="others">OTHERS</string>


    <string name="baseAct_reminder1">No Internet Access</string>
    <string name="baseAct_reminder2">Please connect the network first</string>
    <string name="baseAct_reminder3">OK</string>
    <string name="baseAct_reminder4">Are you sure you want to exit?</string>
    <string name="baseAct_reminder5">Yes</string>
    <string name="baseAct_reminder6">No</string>

    <string name="sj_salaryMin">Salary Range (Min)</string>
    <string name="sj_salaryMax">Salary Range (Max)</string>
    <string name="all">Unspecified</string>

    <string name="fontsizeLarge">Large</string>
    <string name="fontsizeMedium">Medium</string>
    <string name="fontsizeSmall">Small</string>

    <string name="pushNoti">Push Notification</string>
    <string name="Enable_Notification">Enable Push Notification</string>

    <string name="result">Result(s)</string>
</resources>
