<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_salary_check_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"

    android:paddingTop="?attr/actionBarSize"
    tools:context="com.example.dennislam.myapplication.activity.SalaryCheckActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:background="#638EBA"
        android:text="@string/dra_salaryCheck"
        android:textSize="20sp"
        android:textColor="#FFFFFF"/>

    <EditText
        android:layout_marginTop="12dp"
        android:id="@+id/jobTitleField"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/sC_jobtitle"
        android:layout_gravity="center"
        android:gravity="center"
        android:backgroundTint="#000000" />

    <CheckBox
        android:id="@+id/similarCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sC_searchWithS"
        android:layout_gravity="center"
        android:checked="true"
        android:buttonTint="#000000"/>

    <TextView
        android:layout_marginTop="12dp"
        android:id="@+id/jobFunctionButton"
        android:onClick="showJobFunction"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/sC_jobFunction"
        android:textSize="17sp"
        android:background="@drawable/criterias_bg" />

    <TextView
        android:id="@+id/jobIndustryButton"
        android:onClick="showJobIndustry"
        android:layout_marginTop="12dp"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/sC_jobIndustry"
        android:textSize="17sp"
        android:background="@drawable/criterias_bg"/>

    <TextView
        android:id="@+id/WorkExpFrom"
        android:onClick="WorkExpFromDialog"
        android:layout_marginTop="12dp"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:text="@string/sC_Workstart"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="17sp"
        android:background="@drawable/criterias_bg" />

    <TextView
        android:id="@+id/WorkExpTo"
        android:onClick="WorkExpToDialog"
        android:layout_marginTop="12dp"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:text="@string/sC_WorkTo"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="17sp"
        android:background="@drawable/criterias_bg" />

    <TextView
        android:id="@+id/salarySource"
        android:onClick="salarySourceDialog"
        android:layout_marginTop="12dp"
        android:text="@string/sC_Salarysource"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="17sp"
        android:background="@drawable/criterias_bg" />

    <TextView
        android:id="@+id/dataSource"
        android:onClick="dataSourceDialog"
        android:layout_marginTop="12dp"
        android:text="@string/sC_SourceT"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="17sp"
        android:background="@drawable/criterias_bg" />


    <LinearLayout
        android:paddingTop="5dp"
        android:paddingBottom="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sC_buttonSearch"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textColor="#F7F7F7"
            android:background="@drawable/button_style"
            android:layout_gravity="center"/>

    </LinearLayout>


</LinearLayout>
