<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="?attr/actionBarSize"
    tools:context="com.example.dennislam.myapplication.activity.CvActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:background="#638EBA"
        android:text="@string/mp_CV"
        android:textSize="20sp"
        android:textColor="#FFFFFF"/>

    <EditText
        android:id="@+id/nameField"
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:hint="@string/faq_name"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/criterias_bg"
        android:drawablePadding="7dp"/>

    <EditText
        android:id="@+id/emailField"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:hint="@string/faq_email"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/criterias_bg"
        android:drawablePadding="7dp"/>


    <EditText
        android:id="@+id/mobileNoField"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:hint="@string/CV_phoneNo"
        android:inputType="number"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/criterias_bg"
        android:drawablePadding="7dp"/>

    <EditText
        android:id="@+id/expectedSalaryField"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:hint="@string/CV_expectedSalary"
        android:inputType="number"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/criterias_bg"
        android:drawablePadding="7dp"/>

    <TextView
        android:id="@+id/educationLevelField"
        android:onClick="EducationLevelDialog"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:hint="@string/Cv_eduLevel"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/criterias_bg" />

    <TextView
        android:id="@+id/videoCvField"
        android:onClick="startRecordVideo"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:hint="@string/Cv_video_title"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/criterias_bg"
        android:drawablePadding="-35dp"/>



    <LinearLayout
        android:paddingTop="5dp"
        android:paddingBottom="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/sendCvButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CV_submit"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:textColor="#F7F7F7"
            android:background="@drawable/button_style"
            android:layout_gravity="center"/>

    </LinearLayout>


</LinearLayout>
