<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    tool:context="com.example.dennislam.myapplication.activity.FontSizeSettingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:theme="@style/titleBar"
        android:text="@string/fontSizeSetting"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:id="@+id/textView" />

    <TextView
        android:id="@+id/fontSize_large"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:drawablePadding="10dp"
        android:text="@string/fontsizeLarge"
        android:textSize="25sp"
        android:padding="10dp"
        android:onClick="changeFontLarge" />

    <TextView
        android:id="@+id/fontSize_medium"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:drawablePadding="10dp"
        android:text="@string/fontsizeMedium"
        android:textSize="25sp"
        android:padding="10dp"
        android:onClick="changeFontMed" />

    <TextView
        android:id="@+id/fontSize_small"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:drawablePadding="10dp"
        android:text="@string/fontsizeSmall"
        android:textSize="25sp"
        android:padding="10dp"
        android:onClick="changeFontSmall" />


</LinearLayout>