<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/testingbg"
    android:paddingTop="?attr/actionBarSize"
    tools:context="com.example.dennislam.myapplication.activity.FeedbackActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:theme="@style/titleBar"
        android:text="@string/feedback"
        android:textSize="20sp"
        android:textColor="#FFFFFF"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faq_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#F7F7F7"
        android:layout_gravity="center"
        android:gravity="center"/>

    <EditText
        android:layout_marginTop="12dp"
        android:id="@+id/nameField"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:hint="@string/faq_name"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/criterias_bg"/>

    <EditText
        android:id="@+id/emailField"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:hint="@string/faq_email"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/criterias_bg"/>

    <EditText
        android:id="@+id/commentField"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:hint="@string/faq_comments"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/criterias_bg"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RatingBar
            android:theme="@style/RatingBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/feedbackRating"
            android:paddingTop="10dp"
            android:rating="4"
            android:stepSize="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/resetFeedback"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/faq_btnR"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_style2"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/submitFeedback"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/faq_btnD"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:background="@drawable/button_style2"
            android:textColor="#FFFFFF"/>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="- FAQ -"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:background="#18FFFFFF"
        android:textColor="#FFFFFF"/>

    <ExpandableListView
        android:id="@+id/expandableListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"/>


</LinearLayout>
